# canuvit

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/canuvit/: __init__.py  __main__.py  _canuvit_version.py  canuvit.py  cli.py  td1_catalogue.fits
