[metadata]
name = canuvit
version = 0.2.1
author = Prajwel Joseph
author_email = prajwel.pj@gmail.com
description = UVIT safety checks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prajwel/canuvit
project_urls =
    Bug Tracker = https://github.com/prajwel/canuvit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2
    numpy>=1.16
    matplotlib>=2
    astropy>=4
    beautifulsoup4>=4.5

[options.packages.find]
where = src
