[metadata]
name = canuvit
version = 0.3.0
author = Prajwel Joseph
author_email = prajwel.pj@gmail.com
description = UVIT safety checks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prajwel/canuvit
project_urls =
    Bug Tracker = https://github.com/prajwel/canuvit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2
    numpy>=1.16
    matplotlib>=2
    astropy>=4
    beautifulsoup4>=4.5
    click>=8

[options.entry_points]
console_scripts =
    canuvit=canuvit.cli:cli

[options.packages.find]
where = src
